--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypto-dashboard",
   "version": "0.1.0",
-  "homepage": "https://github.com/JeremiahDMoore/crypto-dashboard.git",
+  "homepage": "https://JeremiahDMoore.github.io/crypto-dashboard",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
