updated news api call

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_CURRENCY_CONVERTER_KEY='969c3e8ec3mshb1cce8f14d813cbp192f32jsnf36121c3f2dc'
-REACT_APP_NEWS_FEED_KEY='14e6db2ea2mshd3417466d04fac6p1ac271jsnc70a82dde267'
+# REACT_APP_NEWS_FEED_KEY='14e6db2ea2mshd3417466d04fac6p1ac271jsnc70a82dde267'
+REACT_APP_NEWS_FEED_KEY='14e6db2ea2mshd3417466d04fac6p1ac271jsnc70a82d'
 REACT_APP_TICKER_KEY='969c3e8ec3mshb1cce8f14d813cbp192f32jsnf36121c3f2dc'
