--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crypto-dashboard",
   "version": "0.1.0",
   "homepage": "https://JeremiahDMoore.github.io/crypto-dashboard",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
